--- a/templates/convolution.html
+++ b/templates/convolution.html
@@ -98,7 +98,7 @@
                         
                         <p>Mathematically, the operation can be expressed as:</p>
                         
-                        <div class="p-3 bg-light border rounded mb-3">
+                        <div class="p-3 bg-light border rounded mb-3 text-dark">
                             <p class="text-center mb-0">
                                 (I * K)(x,y) = ∑∑ I(x-m,y-n) × K(m,n)
                             </p>
