--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -54,7 +54,7 @@
                             <div class="card-header bg-success text-white">
                                 <h5 class="mb-0">Real Photo</h5>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80" class="card-img-top" alt="Real Photo">
+                            <img src="{{ url_for('static', filename='img/real1.png') }}" class="card-img-top" alt="Real Photo">
                             <div class="card-body">
                                 <h5 class="card-title">Original Photo</h5>
                                 <p class="card-text">
@@ -69,7 +69,7 @@
                             <div class="card-header bg-danger text-white">
                                 <h5 class="mb-0">DeepFake Version</h5>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1676397217532-ee3cbcc02f8c" class="card-img-top" alt="Deepfake Photo">
+                            <img src="{{ url_for('static', filename='img/fake1.png') }}" class="card-img-top" alt="Deepfake Photo">
                             <div class="card-body">
                                 <h5 class="card-title">AI-Generated Version</h5>
                                 <p class="card-text">
@@ -87,7 +87,7 @@
                             <div class="card-header bg-success text-white">
                                 <h5 class="mb-0">Real Photo</h5>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1468218457742-ee484fe2fe4c" class="card-img-top" alt="Real Photo">
+                            <img src="{{ url_for('static', filename='img/real3.png') }}" class="card-img-top" alt="Real Photo">
                             <div class="card-body">
                                 <h5 class="card-title">Original Photo</h5>
                                 <p class="card-text">
@@ -102,7 +102,7 @@
                             <div class="card-header bg-danger text-white">
                                 <h5 class="mb-0">DeepFake Version</h5>
                             </div>
-                            <img src="https://images.unsplash.com/photo-1579353977828-2a4eab540b9a" class="card-img-top" alt="Deepfake Photo">
+                            <img src="{{ url_for('static', filename='img/fake3.png') }}" class="card-img-top" alt="Deepfake Photo">
                             <div class="card-body">
                                 <h5 class="card-title">AI-Generated Version</h5>
                                 <p class="card-text">
@@ -130,7 +130,7 @@
                 <div class="row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                         <div class="card h-100">
-                            <img src="https://images.unsplash.com/photo-1648195699350-fa0ed4a263e7" class="card-img-top" alt="Face Swap Deepfake">
+                            <img src="https://www.gao.gov/assets/2020-11/Deepfake%201.png" class="card-img-top" alt="Face Swap Deepfake">
                             <div class="card-body">
                                 <h5 class="card-title">Face Swap</h5>
                                 <p class="card-text">
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="https://images.unsplash.com/photo-1616045090958-458bd0e43e70" class="card-img-top" alt="Facial Reenactment">
+                            <img src="https://miro.medium.com/v2/resize:fit:1400/0*zv3WrwJbknZ6kkqV.png" class="card-img-top" alt="Facial Reenactment">
                             <div class="card-body">
                                 <h5 class="card-title">Facial Reenactment</h5>
                                 <p class="card-text">
@@ -160,7 +160,7 @@
                     </div>
                     <div class="col">
                         <div class="card h-100">
-                            <img src="https://images.unsplash.com/photo-1606921231106-f1083329a65c" class="card-img-top" alt="Fully Synthetic">
+                            <img src="https://www.startmotionmedia.com/wp-content/uploads/2025/01/360_F_767127015_U71r5qhPMWRO43TTAu9PIWOGvNdlBAoM-1.jpg" class="card-img-top" alt="Fully Synthetic">
                             <div class="card-body">
                                 <h5 class="card-title">Fully Synthetic</h5>
                                 <p class="card-text">
